logs/cnn_196974.out
Lmod has detected the following error: The following module(s) are unknown:
"python/3.10"

Please check the spelling or version number. Also try "module spider ..."
It is also possible your cache file is out-of-date; it may help to try:
  $ module --ignore_cache load "python/3.10"

Also make sure that all modulefiles written in TCL start with the string
#%Module



Traceback (most recent call last):
  File "/usr/lib/python3.10/runpy.py", line 187, in _run_module_as_main
    mod_name, mod_spec, code = _get_module_details(mod_name, _Error)
  File "/usr/lib/python3.10/runpy.py", line 157, in _get_module_details
    code = loader.get_code(mod_name)
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/scratch/lustre/home/viju8335/projects/sleep-staging-bsc/src/sleepstaging/train_sleep_staging.py", line 109
    loss_fn = nn.CrossEntropyLoss(label_smoothing=0.05)
    ^
IndentationError: expected an indented block after 'try' statement on line 107
